--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,25 +1,6 @@
 body {
     text-align: center;
-}
-
-h1 {
-    font-family: Monoton;
-    font-size: 70px;
-    margin: 0.2em;
-}
-
-h2 {
-    margin: 1em 0 0.25em;
-}
-
-h2:first-of-type {
-    margin-top: 0.5em;
-}
-
-table,
-tr,
-td {
-    border: 1px solid black;
+    font-family: "Comic Sans MS";
 }
 
 table {
@@ -36,17 +17,103 @@ td {
 }
 
 input[type=number] {
-    width: 6em;
+    width: 5em;
+    padding: 5px;
+    font-size: 15px;
+    margin-right: 15px;
+    border: 2px solid rgb(20, 145, 194);;
 }
 
-.grid { margin:1em auto; border-collapse:collapse; }
+input[type=color] {
+    /* background: white; */
+    border: none;
+    border-radius: 5px;
+    width: 40px;
+    height: 25px;
+    cursor: pointer;    
+    -webkit-appearance: none;
+    background-color: none;
+    margin-bottom: 18px;
+  }
+
+.grid {
+    margin: 1em auto;
+    border-collapse: collapse;
+}
+
 .grid td {
-    cursor:pointer;
-    width:30px; height:30px;
-    border:1px solid rgb(0, 0, 0);
-    text-align:center;
-    font-family:sans-serif; font-size:13px
+    cursor: pointer;
+    width: 20px;
+    height: 20px;
+    border: 1px solid rgb(0, 0, 0);
+    text-align: center;
+    font-size: 13px;
+    background-color: white;
 }
+
 .grid td.clicked {
-    background-color:rgb(133, 226, 242);
+    background-color: rgb(133, 226, 242);
 }
+
+h1 {
+    font-weight: 700;
+    font-size: 70px;
+    margin: 10px;
+    color: white;
+    -webkit-margin-after: 0.7em;
+}
+
+h2 {
+    
+    color: white;
+    margin: 15px;
+}
+
+.container {
+    margin: 0 auto;
+    padding: 5%;
+    width: 80%;
+    height: auto;
+    background: #000046;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #000046, #1cb5e0);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #000046, #1cb5e0);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    box-shadow: 0 5px 15px 5px rgba(15, 15, 15, 0.5);
+    border: 7px solid #0d47a1;
+    border-radius: 25px;
+}
+
+#sizePicker {
+    color: white;
+    font-size: 18px;
+    
+}
+
+#btnSubmit, #btnReset  {
+    background-color: rgb(20, 145, 194); 
+    border: 2px solid white;
+    color: white;
+    padding: 10px 15px;
+    text-align: center;
+    display: inline-block;
+    font-size: 18px;
+    font-family: "comic sans MS";
+    cursor: pointer;
+    border-radius: 8px;
+    margin: 5px;
+    
+}
+
+#btnSubmit:hover, #btnReset:hover  {
+    background-color: rgb(104, 208, 94);
+    transform: scale(1.2);
+    
+}
+
+#colorPicker:hover {
+    transform: scale(1.2);
+}
+
+
