Added responsive behaviour for smaller screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@ table {
     margin: 0 auto;
 }
 
+
 /* tr {
      height: 20px; 
 }
@@ -21,22 +22,21 @@ input[type=number] {
     padding: 5px;
     font-size: 15px;
     margin-right: 15px;
-    border: 2px solid rgb(20, 145, 194);;
+    border: 2px solid rgb(20, 145, 194);
 }
 
 input[type=color] {
-    background: #ffffff; 
+    background: #ffffff;
     border: 2;
     border-radius: 5px;
     width: 30px;
     height: 25px;
-    cursor: pointer;    
+    cursor: pointer;
     -webkit-appearance: none;
     background-color: none;
     margin-bottom: 18px;
     border-color: #cbcbcb;
-    
-  }
+}
 
 .grid {
     margin: 1em auto;
@@ -63,16 +63,14 @@ h1 {
     font-size: 40px;
     margin: 10px;
     -webkit-margin-after: 0.7em;
-    text-align: center; 
+    text-align: center;
     margin: 0 auto;
     padding: 0.5%;
     background-color: rgb(78, 74, 74);
-  
     /* border-radius: 25px; */
 }
 
 h2 {
-    
     color: rgb(94, 93, 91);
 }
 
@@ -85,17 +83,18 @@ h2 {
     /* border-radius: 25px; */
     float: left;
     text-align: left;
-
+    min-width: 10%;
+    
 }
 
 #sizePicker {
     /* color: #CFEE1B; */
     font-size: 18px;
-    
 }
 
-#btnSubmit, #btnReset  {
-    background-color: rgb(115, 118, 119); 
+#btnSubmit,
+#btnReset {
+    background-color: rgb(115, 118, 119);
     border: 2px solid white;
     color: white;
     padding: 10px 15px;
@@ -107,74 +106,79 @@ h2 {
     border-radius: 8px;
     margin: 5px;
     /* box-shadow: inset 2px 3px 111px 16px rgba(145,150,153,0.98); */
-    
-    
 }
 
-#btnSubmit:hover, #btnReset:hover  {
+#btnSubmit:hover,
+#btnReset:hover {
     background-color: rgb(104, 208, 94);
     transform: scale(1.2);
-    
 }
 
-#colorPicker:hover , .color:hover {
-    
+#colorPicker:hover,
+.color:hover {
     transform: scale(1.4);
     cursor: pointer;
 }
 
 .predefined-colors {
     margin: 0 auto 15px auto;
-  }
-  .predefined-colors > div {
+}
+
+.predefined-colors>div {
     display: inline-block;
     border: 3px solid #989ea8;
     border-radius: 5px;
-    width: 20px;    
+    width: 20px;
     height: 20px;
-  }
-  /* Predefined colors set */
-  .predefined-colors .color:nth-child(1) {
+}
+
+
+/* Predefined colors set */
+
+.predefined-colors .color:nth-child(1) {
     background: #f43656;
-  }
-  .predefined-colors .color:nth-child(2) {
+}
+
+.predefined-colors .color:nth-child(2) {
     background: #ffa755fb;
-  }
-  .predefined-colors .color:nth-child(3) {
+}
+
+.predefined-colors .color:nth-child(3) {
     background: #fce303;
-  }
-  .predefined-colors .color:nth-child(4) {
+}
+
+.predefined-colors .color:nth-child(4) {
     background: #23e06c;
-  }
-  .predefined-colors .color:nth-child(5) {
+}
+
+.predefined-colors .color:nth-child(5) {
     background: #4ee7f1;
-  }
-  
+}
+
 .predefined-colors .color:nth-child(6) {
     background: #2a9df5;
-  }
-  .predefined-colors .color:nth-child(7) {
+}
+
+.predefined-colors .color:nth-child(7) {
     background: #917bf5;
-  }
+}
 
-  .main_container {
-      width: 100%;
-  }
+.main_container {
+    width: 100%;
+}
 
-  .grid_container {
+.grid_container {
     /* box-shadow: 0 5px 15px 5px rgba(15, 15, 15, 0.5); */
     /* border-radius: 25px; */
-margin-left: 15%;
-/* padding-top: 2%; */
-
-  }
+    margin-left: 15%;
+    /* padding-top: 2%; */
+}
 
 .eraserIcon {
- float: left;
- width: 50px;
- height: 50px;
- cursor: pointer;
- 
+    float: left;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
 }
 
 .eraserText {
@@ -183,7 +187,6 @@ margin-left: 15%;
     padding-left: 2.5em;
     color: rgb(94, 93, 91);
     cursor: pointer;
-
 }
 
 .instructions {
@@ -191,14 +194,88 @@ margin-left: 15%;
 }
 
 ol {
-    padding: 1px;
+    padding-left: 10px;
 }
 
-.eraserIcon:hover, .eraserText:hover {
+.eraserIcon:hover,
+.eraserText:hover {
     color: rgb(104, 208, 94);
     transform: scale(1.2);
 }
 
 h4 {
     margin-bottom: 0px;
+}
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    h1 {
+        font-size: 22px;
+    }
+    h2 {
+        font-size: 12px;
+    }
+    #sizePicker {
+        font-size: 15px;
+    }
+    #btnSubmit,
+    #btnReset {
+        padding: 5px;
+        font-size: 13px;
+        margin: 2px;
+    }
+    input[type=number] {
+        width: 3em;
+        font-size: 10px;
+    }
+    .predefined-colors>div {
+        width: 10px;
+        height: 10px;
+        border: 1px solid #989ea8;
+    }
+    input[type=color] {
+        background: #ffffff;
+        border: 2;
+        border-radius: 5px;
+        width: 20px;
+        height: 25px;
+        cursor: pointer;
+        -webkit-appearance: none;
+        background-color: none;
+        margin-bottom: 18px;
+        border-color: #cbcbcb;
+    }
+    .eraserIcon {
+        width: 20px;
+        height: 20px;
+    }
+    .eraserText {
+        font-size: 15px;
+        padding-left: 0.1em;
+        color: rgb(94, 93, 91);
+    }
+    .instructions {
+        font-size: 58%;
+    }
+
+    ol {
+        padding-left: 10px;
+    }
+
+
+    /* .container {
+        padding: 1%;
+        width: 13%;
+        height: 80%;
+        
+    } */
+
+    .grid td {
+        width: 4px;
+        height: 4px;
+        
+    }
+    
+
+
 }
